--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,15 @@ license = "Apache"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-langchain = "^0.0"
-unstructured = "^0.7"
-openai = "^0.27"
-pdf2image = "^1.16"
-chromadb = "^0.3"
-tiktoken = "^0.4"
-fastapi = "^0.95"
-python-multipart = "^0.0"
-paper-qa = "^3.12.0"
-pyarrow = "^13.0.0" 
-biopython = "^1.81"
+langchain = "*"
+unstructured = "*"
+openai = "*"
+pdf2image = "*"
+chromadb = "*"
+tiktoken = "*"
+paper-qa = "*"
+pyarrow = "*" 
+biopython = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
