Add sentence-transformers and update deps.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ paper-qa = "*"
 pyarrow = "*" 
 biopython = "*"
 pandas = "*"
+sentence-transformers = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
