--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pyarrow = "*"
 biopython = "*"
 pandas = "*"
 sentence-transformers = "*"
-hnswlib = "*"
+vectorizedb = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
